Made changes in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Little Lemon is a cozy, family-friendly restaurant offering a variety of delicious dishes made from fresh, local ingredients.
+      Enjoy mouth-watering meals and exceptional service in a welcoming atmosphere!"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:title" content="Little Lemon - Delicious Dining Experience" />
+    <meta property="og:description" content="Little Lemon offers an exceptional dining experience with mouth-watering dishes made from fresh, local ingredients in a welcoming and cozy atmosphere." />
+    <meta property="og:image" content="%PUBLIC_URL%/restaurantfood.jpg" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/restaurantfood.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
