--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="http://fonts.gstatic.com" crossorigin>
+
+    <script src="https://raw.githubusercontent.com/Meta-Front-End-Developer-PC/capstone/master/api.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,9 +15,9 @@
       content="Little Lemon is a cozy, family-friendly restaurant offering a variety of delicious dishes made from fresh, local ingredients.
       Enjoy mouth-watering meals and exceptional service in a welcoming atmosphere!"
     />
-    <meta property="og:title" content="Little Lemon - Delicious Dining Experience" />
-    <meta property="og:description" content="Little Lemon offers an exceptional dining experience with mouth-watering dishes made from fresh, local ingredients in a welcoming and cozy atmosphere." />
-    <meta property="og:image" content="%PUBLIC_URL%/restaurantfood.jpg" />
+    <meta property="og:title" content="Little Lemon Website" />
+    <meta property="og:description" content="Website for Little Lemon Restaurant" />
+    <meta property="og:image" content="./littlelemon_logo.png"/>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/restaurantfood.jpg" />
     <!--
